# agent-tool-chorus-form-builder

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-23-form-builder-v01.md  2026-05-23-procedure-js-generator-v01.md
docs/superpowers/specs/: 2026-05-23-form-builder-v01-design.md  2026-05-23-procedure-js-generator-v01-design.md
src/chorus_form_builder/: __init__.py  _types.py  binding.py  cli.py  emit.py  manifest.py  procedures.py  spec.py
src/chorus_form_builder/runtime/: __init__.py  awdForm.js
tests/: test_binding.py  test_build_form.py  test_chorus_forms_assumption.py  test_chorus_forms_rules_assumption.py  test_cli.py  test_emit.py  test_goldens.py  test_js_runtime.py  test_procedures.py  test_spec.py
tests/goldens/oracle_dcmb/: ORACLDC.csd  ORACLDC.uxb.json  ORACLDC_manifest.json  form.yaml  oracle.json  response.json
tests/goldens/static_combo/: STATCOMB.csd  STATCOMB.uxb.json  STATCOMB_manifest.json  form.yaml
tests/goldens/text_plus_combo/: TXTCOMBO.csd  TXTCOMBO.uxb.json  TXTCOMBO_manifest.json  form.yaml  oracle.json  response.json
tests/goldens/with_rules/: RULEFRM1.csd  RULEFRM1.uxb.json  RULEFRM1_manifest.json  form.yaml
tests/js_runtime/: host_recorder.js  runner.js
tests/js_runtime/test_cases/: default_when.js  enabled_when.js  multi_rule.js  required_when.js  shim_smoke.js  visible_when.js
