[project]
name = "agent-tool-chorus-form-builder"
version = "0.1.0"
description = "Generate Chorus forms (.csd + UXB JSON) from a declarative YAML spec, with optional OpenAPI endpoint binding."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chris Moore" }]
dependencies = [
    "chorus-forms",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "jsonpath-ng>=1.6",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
chorus-form-build = "chorus_form_builder.cli:main"

[tool.uv.sources]
chorus-forms = { path = "../chorus-repos/chorus-forms", editable = true }

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
chorus_form_builder = ["runtime/*.js"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["chorus_form_builder*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
